@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false

interface CacheClient
interface CacheProvider
interface CacheSpecResolver
interface CacheTtlResolver
interface CacheLoadGuard
interface CacheMetricsRecorder
interface CacheEventPublisher
interface CacheEventHandler
interface LocalCacheInvalidator

class DefaultCacheClient
class DefaultCacheTtlResolver
class LocalMutexCacheLoadGuard
class NoopCacheMetricsRecorder
class CacheKey
class CacheSpec
class CacheValue
class CacheResult
class CompositeCacheProvider
class CaffeineCacheProvider
class CaffeineLocalCacheManager
class CaffeineLocalCacheInvalidator
class LocalCacheEntry
class RedisCacheProvider
interface RedisBinaryClient
class SpringDataRedisBinaryClient
interface RedisCacheSerializer
class JacksonRedisCacheSerializer
class CacheEvent
class DefaultCacheEventHandler
class NoopCacheEventPublisher
class RedisCacheEventPublisher
class RedisCacheEventSubscriber
interface RedisCacheEventSerializer
class JacksonRedisCacheEventSerializer
class XjtuIronCacheProperties
class XjtuIronCacheAutoConfiguration
class XjtuIronCacheCaffeineAutoConfiguration
class XjtuIronCacheRedisAutoConfiguration
class XjtuIronCacheEventAutoConfiguration
class XjtuIronCacheCoreAutoConfiguration
class XjtuIronCacheObservabilityAutoConfiguration

DefaultCacheClient ..|> CacheClient
DefaultCacheClient --> CacheProvider
DefaultCacheClient --> CacheSpecResolver
DefaultCacheClient --> CacheTtlResolver
DefaultCacheClient --> CacheLoadGuard
DefaultCacheClient --> CacheMetricsRecorder
DefaultCacheClient --> CacheEventPublisher

DefaultCacheTtlResolver ..|> CacheTtlResolver
LocalMutexCacheLoadGuard ..|> CacheLoadGuard
NoopCacheMetricsRecorder ..|> CacheMetricsRecorder
NoopCacheEventPublisher ..|> CacheEventPublisher

CompositeCacheProvider ..|> CacheProvider
CaffeineCacheProvider ..|> CacheProvider
RedisCacheProvider ..|> CacheProvider

CompositeCacheProvider --> CaffeineCacheProvider : L1
CompositeCacheProvider --> RedisCacheProvider : L2

CaffeineCacheProvider --> CaffeineLocalCacheManager
CaffeineLocalCacheManager --> LocalCacheEntry
CaffeineLocalCacheInvalidator ..|> LocalCacheInvalidator
CaffeineLocalCacheInvalidator --> CaffeineLocalCacheManager

RedisCacheProvider --> RedisBinaryClient
RedisCacheProvider --> RedisCacheSerializer
SpringDataRedisBinaryClient ..|> RedisBinaryClient
JacksonRedisCacheSerializer ..|> RedisCacheSerializer

DefaultCacheEventHandler ..|> CacheEventHandler
DefaultCacheEventHandler --> LocalCacheInvalidator
RedisCacheEventPublisher ..|> CacheEventPublisher
RedisCacheEventSubscriber --> CacheEventHandler
RedisCacheEventSubscriber --> RedisCacheEventSerializer
JacksonRedisCacheEventSerializer ..|> RedisCacheEventSerializer

CacheClient --> CacheKey
CacheClient --> CacheSpec
CacheClient --> CacheResult
CacheResult --> CacheValue

XjtuIronCacheAutoConfiguration --> XjtuIronCacheProperties
XjtuIronCacheCaffeineAutoConfiguration --> CaffeineCacheProvider
XjtuIronCacheRedisAutoConfiguration --> RedisCacheProvider
XjtuIronCacheEventAutoConfiguration --> CacheEventPublisher
XjtuIronCacheCoreAutoConfiguration --> DefaultCacheClient
XjtuIronCacheObservabilityAutoConfiguration --> CacheMetricsRecorder

@enduml
